--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js --display-error-details",
+    "build:watch": "cross-env NODE_ENV=production webpack --config webpack.prod.js --display-error-details --watch",
     "build:scripts": "cross-env NODE_ENV=production webpack --config webpack.cli.js",
     "add-contributor": "all-contributors add",
     "generate-contributors": "all-contributors generate",
@@ -156,6 +157,7 @@
     "react-scroll-sync": "^0.4.0",
     "react-sortable-hoc": "^0.6.8",
     "react-split-pane": "^0.1.66",
+    "react-tag-autocomplete": "^5.5.0",
     "react-textarea-autosize": "^5.2.0",
     "react-toggled": "^1.1.2",
     "react-topbar-progress-indicator": "^2.0.0",
